fix: adicionar white-space nowrap no navlink e mais um card

--- a/css/style.css
+++ b/css/style.css
@@ -268,4 +268,5 @@ a {
 .app-navbar .nav-link span {
   font-size: 0.75rem;
   font-weight: 500;
+  white-space: nowrap;
 }
